--- a/src/styles/logo.css
+++ b/src/styles/logo.css
@@ -10,9 +10,3 @@
   width: auto;
   pointer-events: none;
 }
-
-@media (max-width: 600px) {
-  #site-logo {
-    height: 60px;
-  }
-}
